feature added + bookmark added

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </div>
   </div>
 
+  <script type="module" src="features/bookmarks.js"></script>
   <script type="module" src="renderer.js"></script>
 </body>
 </html>
