reading text : OCR + direct

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
  
   <div id="toolbar">
     <button id="open"> <img src="icons/folder.svg" alt="Open" class="icon" /> Open</button>
-    <button id="save"><img src="icons/save.svg" alt="Open" class="icon" /> Save</button>
-    <button id="zoom-out"><img src="icons/zoom-out.svg" alt="Open" class="icon" /> Zoom Out</button>
+    <button id="save"><img src="icons/save.svg" alt="save" class="icon" /> Save</button>
+    <button id="zoom-out"><img src="icons/zoom-out.svg" alt="zoom-out" class="icon" /> Zoom Out</button>
     <span id="zoom-display">100%</span>
-    <button id="zoom-in"><img src="icons/zoom-in.svg" alt="Open" class="icon" />Zoom in</button>
-    <button id="rotate-left"><img src="icons/left-rotate.svg" alt="Open" class="icon" /> Rotate</button>
-    <button id="rotate-right"><img src="icons/right-rotate.svg" alt="Open" class="icon" /> Rotate</button>
-    <button id="highlight"><img src="icons/highlight.svg" alt="Open" class="icon" />Highlight</button>
-    <button id="underline"><img src="icons/underline.svg" alt="Open" class="icon" /> Underline</button>
+    <button id="zoom-in"><img src="icons/zoom-in.svg" alt="zoom-in" class="icon" />Zoom in</button>
+    <button id="rotate-left"><img src="icons/left-rotate.svg" alt="rotate-left" class="icon" /> Rotate</button>
+    <button id="rotate-right"><img src="icons/right-rotate.svg" alt="rotate-right" class="icon" /> Rotate</button>
+    <button id="highlight"><img src="icons/highlight.svg" alt="highlight" class="icon" />Highlight</button>
+    <button id="underline"><img src="icons/underline.svg" alt="underline" class="icon" /> Underline</button>
     <button id="add-text"><img src="icons/write.svg" alt="Open" class="icon" />Add Text</button>
-    <button id="fullscreen"><img src="icons/full-screen.svg" alt="Open" class="icon" /> Fullscreen</button>
-    <button id="dark-mode-toggle"><img src="icons/day.svg" alt="Open" class="icon" />/<img src="icons/night.svg" alt="Open" class="icon" /> Mode</button>
+    <button id="fullscreen"><img src="icons/full-screen.svg" alt="fullscreen" class="icon" /> Fullscreen</button>
+    <button id="dark-mode-toggle">
+      <img src="icons/day.svg" alt="Open" class="icon" /> / 
+      <img src="icons/night.svg" alt="Open" class="icon" /> Mode</button>
   </div>
 
   <!--  Multiple pdfs tabs container -->
