--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <button id="highlight"><img src="icons/highlight.svg" alt="highlight" class="icon" />Highlight</button>
     <button id="underline"><img src="icons/underline.svg" alt="underline" class="icon" /> Underline</button>
     <button id="add-text"><img src="icons/write.svg" alt="Open" class="icon" />Add Text</button>
+    <button id="dictionary">📘 Dictionary</button>
     <button id="fullscreen"><img src="icons/full-screen.svg" alt="fullscreen" class="icon" /> Fullscreen</button>
     <button id="dark-mode-toggle">
       <img src="icons/day.svg" alt="Open" class="icon" /> / 
@@ -68,7 +69,9 @@
     </div>
   </div>
 
+    
   <script type="module" src="features/bookmarks.js"></script>
+  <script type="module" src="advance/dictionary.js"></script>
   <script type="module" src="renderer.js"></script>
 </body>
 </html>
