--- a/index.html
+++ b/index.html
@@ -69,6 +69,30 @@
     </div>
   </div>
 
+  <!-- hovering button  -->
+   <!-- Dictionary -->
+   <div class="tab-dictionary">
+    <span class="tab-icon"><img src="icons/dictionary.svg" alt="dictionary" class="icon" /></span>
+    <span class="tab-text">Dictionary</span>
+  </div>
+
+  <!-- Translation -->
+  <div class="tab-translation">
+    <span class="tab-icon">🌐</span>
+    <span class="tab-text">Translation</span>
+  </div>
+
+  <!-- QnA -->
+  <div class="tab-qna">
+    <span class="tab-icon">❓</span>
+    <span class="tab-text">Q&A</span>
+  </div>
+
+  <!-- Summarizer -->
+  <div class="tab-summarizer">
+    <span class="tab-icon">📝</span>
+    <span class="tab-text">Summarizer</span>
+  </div>
     
   <script type="module" src="features/bookmarks.js"></script>
   <script type="module" src="advance/dictionary.js"></script>
