summarizer , qna , translation added

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     </div>
 
     <!-- pdf working place : check it later -->
+    
     <div id="pdf-viewer">
       <div id="controls">
         <button id="prev">⬅ Prev</button>
@@ -87,7 +88,7 @@
     </div>
 
     <!-- Summarizer -->
-    <div class="tab-summarizer">
+    <div class="tab-summarizer" id="summarizer-tab">
       <span class="tab-icon"><img src="icons/notes.svg" alt="notes" class="icon" /></span>
       <span class="tab-text">Summarizer</span>
     </div>
@@ -102,6 +103,7 @@
   <script type="module" src="features/bookmarks.js"></script>
   <script type="module" src="advance/dictionary.js"></script>
   <script type="module" src="advance/exportToPdf.js"></script>
+  <script type="module" src="advance/summarize.js"></script>
   <script type="module" src="renderer.js"></script>
 </body>
 </html>
